# MushiCord

./: PRIVACY.md  README.md  app.py  event_handler.py  main.py  other.py  pyproject.toml
classes/: client.py
cogs/: client_guild.py  info.py  member.py  music.py  other.py  stat.py
utils/: errors.py  message_functions.py  mongo.py
